create and implement main button

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <li class="navigation-wrapper__menu__item">Five</li>
         </ul>
     </nav>
-    <button class="login_button">Login</button>
+    <button class="main_button">Login</button>
 </header>
 </body>
 </html>
