create hero slider

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,34 @@
     </div>
     <nav class="navigation-wrapper">
         <ul class="navigation-wrapper__menu">
-            <li class="navigation-wrapper__menu__item">One</li>
-            <li class="navigation-wrapper__menu__item">Two</li>
-            <li class="navigation-wrapper__menu__item">Three</li>
-            <li class="navigation-wrapper__menu__item">Five</li>
+            <li class="navigation-wrapper__menu__item">
+                <a class="navigation-wrapper__menu__item__link" href="#">About</a>
+            </li>
+            <li class="navigation-wrapper__menu__item">
+                <a class="navigation-wrapper__menu__item__link" href=" #">Offices</a>
+            </li>
+            <li class="navigation-wrapper__menu__item">
+                <a class="navigation-wrapper__menu__item__link" href=" #">Packages</a>
+            </li>
+            <li class="navigation-wrapper__menu__item">
+                <a class="navigation-wrapper__menu__item__link" href="#">Benefits</a>
+            </li>
+            <li class="navigation-wrapper__menu__item">
+                <a class="navigation-wrapper__menu__item__link" href="#">Prices</a>
+            </li>
         </ul>
     </nav>
-    <button class="main_button">Login</button>
+    <button class="c-button">Login</button>
 </header>
+<section class="swiper c-hero-slider">
+    <div class="swiper-wrapper">
+        <div class="c-hero-slider__content swiper-slide">
+            <h1 class="c-hero-slider__content__title">Welcome to Worklyfe Office</h1>
+            <button class="c-button c-button--green">See the benefits</button>
+        </div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+    </div>
+</section>
 </body>
 </html>
