--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,18 @@
 </header>
 <section class="swiper c-hero-slider">
     <div class="swiper-wrapper">
-        <div class="c-hero-slider__content swiper-slide">
-            <h1 class="c-hero-slider__content__title">Welcome to Worklyfe Office</h1>
+        <div class="c-hero-slider__content swiper-slide column">
+            <h1 class="title title--big title--white">Welcome to Work<span class="c-hero-slider__content__green-part">lyfe</span> Office</h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
-        <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
+        <div class="c-hero-slider__content swiper-slide column">
+            <h1 class="title title--big title--white">Welcome to Work<span class="c-hero-slider__content__green-part">lyfe</span> Office</h1>
+            <button class="c-button c-button--green">See the benefits</button>
+        </div>
+        <div class="c-hero-slider__content swiper-slide column">
+            <h1 class="title title--big title--white">Welcome to Work <span class="c-hero-slider__content__green-part">lyfe</span>Office</h1>
+            <button class="c-button c-button--green">See the benefits</button>
+        </div>
     </div>
 </section>
 </body>
