add office section and styles

--- a/src/index.html
+++ b/src/index.html
@@ -34,17 +34,33 @@
 <section class="swiper c-hero-slider">
     <div class="swiper-wrapper">
         <div class="c-hero-slider__content swiper-slide column">
-            <h1 class="title title--big title--white">Welcome to Work<span class="c-hero-slider__content__green-part">lyfe</span> Office</h1>
+            <h1 class="title title--big title--white">Welcome to Work<span class="c-hero-slider__content__green-part">lyfe</span>
+                Office</h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
         <div class="c-hero-slider__content swiper-slide column">
-            <h1 class="title title--big title--white">Welcome to Work<span class="c-hero-slider__content__green-part">lyfe</span> Office</h1>
+            <h1 class="title title--big title--white">Welcome to Work<span class="c-hero-slider__content__green-part">lyfe</span>
+                Office</h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
         <div class="c-hero-slider__content swiper-slide column">
-            <h1 class="title title--big title--white">Welcome to Work <span class="c-hero-slider__content__green-part">lyfe</span>Office</h1>
+            <h1 class="title title--big title--white">Welcome to Work <span class="c-hero-slider__content__green-part">lyfe</span>Office
+            </h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
+    </div>
+</section>
+<section class="c-office row">
+    <div class="c-office__images">
+        <div class="c-office__images__back"></div>
+        <div class="c-office__images__front"></div>
+    </div>
+    <div class="c-office__content">
+        <h2 class="title title--medium--green">Check your new office</h2>
+        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget lectus urna. Nulla
+            magna tortor, bibendum in molestie sed, gravida nec felis. Sed id egestasegestas risus, ut imperdiet
+            augue.</p>
+        <button class="c-button c-button--green">View the FAQ</button>
     </div>
 </section>
 </body>
