fix css for office section

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget lectus urna. Nulla
             magna tortor, bibendum in molestie sed, gravida nec felis. Sed id egestasegestas risus, ut imperdiet
             augue.</p>
-        <button class="c-button c-button--green">View the FAQ</button>
+        <button class="c-button c-button--outline">View the FAQ</button>
     </div>
 </section>
 </body>
