add real stories section

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,9 @@
             </h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
+
     </div>
+    <div class="swiper-pagination"></div>
 </section>
 <section class="c-office row">
     <div class="c-office__images">
@@ -69,7 +71,61 @@
         <p class="paragraph paragraph--white-center">Staying productive is great fun and keeps you healthy. Check out how you can join in.</p>
         <button class="c-button c-button--green">Let’s do it!</button>
     </div>
-
 </section>
+<section class="c-real-stories">
+        <div class="c-real-stories__title">
+            <h1 class="title">Real Stories from Our Staff</h1>
+            <p class="paragraph">Be inspired with these experiences.</p>
+        </div>
+    <div class="posts">
+        <div class="card">
+            <h3 class="title title--m-size title--green">His mother had always taught him</h3>
+            <p class="paragraph card__content">
+                His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
+            </p>
+            <div class="row user-info">
+                <div class="user-info__image">
+                    <img src="./static/images/avatar.jpg" alt=""/>
+                </div>
+                <div class="user-info__about">
+                    <span class="title">Demetrius Corkery</span>
+                    <span class="paragraph">Community Outreach Specialist</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <h3 class="title title--m-size title--green">His mother had always taught him</h3>
+            <p class="paragraph card__content">
+                His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
+            </p>
+            <div class="row user-info">
+                <div class="user-info__image">
+                    <img src="./static/images/avatar.jpg" alt=""/>
+                </div>
+                <div class="user-info__about">
+                    <span class="title">Demetrius Corkery</span>
+                    <span class="paragraph">Community Outreach Specialist</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <h3 class="title title--m-size title--green">His mother had always taught him</h3>
+            <p class="paragraph card__content">
+                His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
+            </p>
+            <div class="row user-info">
+                <div class="user-info__image">
+                    <img src="./static/images/avatar.jpg" alt=""/>
+                </div>
+                <div class="user-info__about">
+                    <span class="title">Demetrius Corkery</span>
+                    <span class="paragraph">Community Outreach Specialist</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+    </div>
+
 </body>
 </html>
