add card and styles

--- a/src/index.html
+++ b/src/index.html
@@ -73,14 +73,37 @@
     </div>
 </section>
 <section class="c-real-stories">
+
         <div class="c-real-stories__title">
-            <h1 class="title">Real Stories from Our Staff</h1>
-            <p class="paragraph">Be inspired with these experiences.</p>
+            <div class="icon" style="background-image: url('./static/images/icon.png')">
+            </div>
+            <div class="front">
+                <h1 class="title title--medium">Real Stories from Our Staff</h1>
+                <p class="paragraph">Be inspired with these experiences.</p>
+            </div>
+            <div class="card">
+
+                <h3 class="title title--m-size title--green">His mother had always taught him</h3>
+                <p class="paragraph card__content">
+<span class="card__icon" style="background-image: url('./static/images/icon.png')"></span>
+                    His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
+                </p>
+                <div class="row user-info">
+                    <div class="user-info__image">
+                        <img src="./static/images/avatar.jpg" alt=""/>
+                    </div>
+                    <div class="user-info__about">
+                        <span class="title title--bold">Demetrius Corkery</span>
+                        <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
-    <div class="posts">
+    <div class="column">
         <div class="card">
             <h3 class="title title--m-size title--green">His mother had always taught him</h3>
-            <p class="paragraph card__content">
+            <p class="paragraph card__content"><span class="card__icon" style="background-image: url('./static/images/icon.png')"></span>
                 His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
             </p>
             <div class="row user-info">
@@ -88,14 +111,15 @@
                     <img src="./static/images/avatar.jpg" alt=""/>
                 </div>
                 <div class="user-info__about">
-                    <span class="title">Demetrius Corkery</span>
-                    <span class="paragraph">Community Outreach Specialist</span>
+                    <span class="title title--bold">Demetrius Corkery</span>
+                    <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
                 </div>
             </div>
         </div>
         <div class="card">
             <h3 class="title title--m-size title--green">His mother had always taught him</h3>
             <p class="paragraph card__content">
+                <span class="card__icon" style="background-image: url('./static/images/icon.png')"></span>
                 His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
             </p>
             <div class="row user-info">
@@ -103,29 +127,13 @@
                     <img src="./static/images/avatar.jpg" alt=""/>
                 </div>
                 <div class="user-info__about">
-                    <span class="title">Demetrius Corkery</span>
-                    <span class="paragraph">Community Outreach Specialist</span>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <h3 class="title title--m-size title--green">His mother had always taught him</h3>
-            <p class="paragraph card__content">
-                His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
-            </p>
-            <div class="row user-info">
-                <div class="user-info__image">
-                    <img src="./static/images/avatar.jpg" alt=""/>
-                </div>
-                <div class="user-info__about">
-                    <span class="title">Demetrius Corkery</span>
-                    <span class="paragraph">Community Outreach Specialist</span>
+                    <span class="title title--bold">Demetrius Corkery</span>
+                    <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
                 </div>
             </div>
         </div>
     </div>
 </section>
-    </div>
 
 </body>
 </html>
