--- a/src/index.html
+++ b/src/index.html
@@ -34,17 +34,20 @@
 <section class="swiper c-hero-slider">
     <div class="swiper-wrapper">
         <div class="c-hero-slider__content swiper-slide column">
-            <h1 class="title title--xl-size title--white">Welcome to Work<span class="c-hero-slider__content__green-part">lyfe</span>
+            <h1 class="title title--xl-size title--white">Welcome to Work<span
+                    class="c-hero-slider__content__green-part">lyfe</span>
                 Office</h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
         <div class="c-hero-slider__content swiper-slide column">
-            <h1 class="title title--xl-size title--white">Welcome to Work<span class="c-hero-slider__content__green-part">lyfe</span>
+            <h1 class="title title--xl-size title--white">Welcome to Work<span
+                    class="c-hero-slider__content__green-part">lyfe</span>
                 Office</h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
         <div class="c-hero-slider__content swiper-slide column">
-            <h1 class="title title--xl-size title--white">Welcome to Work <span class="c-hero-slider__content__green-part">lyfe</span>Office
+            <h1 class="title title--xl-size title--white">Welcome to Work <span
+                    class="c-hero-slider__content__green-part">lyfe</span>Office
             </h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
@@ -68,71 +71,73 @@
 <section class="c-panel" style="background-image: url('./static/images/panel.png')">
     <div class="c-panel__content">
         <h1 class="title title--l-size title--white">Become more than you are</h1>
-        <p class="paragraph paragraph--white-center">Staying productive is great fun and keeps you healthy. Check out how you can join in.</p>
+        <p class="paragraph paragraph--white-center">Staying productive is great fun and keeps you healthy. Check out
+            how you can join in.</p>
         <button class="c-button c-button--green">Let’s do it!</button>
     </div>
 </section>
-<section class="c-real-stories">
-
-        <div class="c-real-stories__title">
-            <div class="icon" style="background-image: url('./static/images/icon.png')">
+<section class="c-real-stories row">
+        <div class="c-real-stories__first column">
+            <div class="c-real-stories__title">
+                <div class="c-icon c-icon--big" style="background-image: url('./static/images/icon.png')">
+                </div>
+                <div class="front column">
+                    <h1 class="title title--medium">Real Stories from Our Staff</h1>
+                    <p class="paragraph">Be inspired with these experiences.</p>
+                </div>
             </div>
-            <div class="front">
-                <h1 class="title title--medium">Real Stories from Our Staff</h1>
-                <p class="paragraph">Be inspired with these experiences.</p>
-            </div>
-            <div class="card">
-
+            <div class="card column">
                 <h3 class="title title--m-size title--green">His mother had always taught him</h3>
                 <p class="paragraph card__content">
-<span class="card__icon" style="background-image: url('./static/images/icon.png')"></span>
+                    <span class="c-icon c-icon--small"  style="background-image: url('./static/images/icon.png')"></span>
                     His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
                 </p>
                 <div class="row user-info">
                     <div class="user-info__image">
                         <img src="./static/images/avatar.jpg" alt=""/>
                     </div>
-                    <div class="user-info__about">
+                    <div class="user-info__about column">
                         <span class="title title--bold">Demetrius Corkery</span>
                         <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
                     </div>
                 </div>
             </div>
+        </div>
 
-        </div>
-    <div class="column">
-        <div class="card">
-            <h3 class="title title--m-size title--green">His mother had always taught him</h3>
-            <p class="paragraph card__content"><span class="card__icon" style="background-image: url('./static/images/icon.png')"></span>
-                His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
-            </p>
-            <div class="row user-info">
-                <div class="user-info__image">
-                    <img src="./static/images/avatar.jpg" alt=""/>
+        <div class="column">
+            <div class="card column">
+                <h3 class="title title--m-size title--green">His mother had always taught him</h3>
+                <p class="paragraph card__content">
+                    <span class="c-icon c-icon--small" style="background-image: url('./static/images/icon.png')"></span>
+                    His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
+                </p>
+                <div class="row user-info">
+                    <div class="user-info__image">
+                        <img src="./static/images/avatar.jpg" alt=""/>
+                    </div>
+                    <div class="user-info__about column">
+                        <span class="title title--bold">Demetrius Corkery</span>
+                        <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
+                    </div>
                 </div>
-                <div class="user-info__about">
-                    <span class="title title--bold">Demetrius Corkery</span>
-                    <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
+            </div>
+            <div class="card column">
+                <h3 class="title title--m-size title--green">His mother had always taught him</h3>
+                <p class="paragraph card__content">
+                    <span class="c-icon c-icon--small"  style="background-image: url('./static/images/icon.png')"></span>
+                    His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
+                </p>
+                <div class="row user-info">
+                    <div class="user-info__image">
+                        <img src="./static/images/avatar.jpg" alt=""/>
+                    </div>
+                    <div class="user-info__about column">
+                        <span class="title title--bold">Demetrius Corkery</span>
+                        <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="card">
-            <h3 class="title title--m-size title--green">His mother had always taught him</h3>
-            <p class="paragraph card__content">
-                <span class="card__icon" style="background-image: url('./static/images/icon.png')"></span>
-                His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
-            </p>
-            <div class="row user-info">
-                <div class="user-info__image">
-                    <img src="./static/images/avatar.jpg" alt=""/>
-                </div>
-                <div class="user-info__about">
-                    <span class="title title--bold">Demetrius Corkery</span>
-                    <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 </body>
