refactor real stories component and implement it

--- a/src/index.html
+++ b/src/index.html
@@ -77,67 +77,8 @@
     </div>
 </section>
 <section class="c-real-stories row">
-        <div class="c-real-stories__first column">
-            <div class="c-real-stories__title">
-                <div class="c-icon c-icon--big" style="background-image: url('./static/images/icon.png')">
-                </div>
-                <div class="front column">
-                    <h1 class="title title--medium">Real Stories from Our Staff</h1>
-                    <p class="paragraph">Be inspired with these experiences.</p>
-                </div>
-            </div>
-            <div class="card column">
-                <h3 class="title title--m-size title--green">His mother had always taught him</h3>
-                <p class="paragraph card__content">
-                    <span class="c-icon c-icon--small"  style="background-image: url('./static/images/icon.png')"></span>
-                    His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
-                </p>
-                <div class="row user-info">
-                    <div class="user-info__image">
-                        <img src="./static/images/avatar.jpg" alt=""/>
-                    </div>
-                    <div class="user-info__about column">
-                        <span class="title title--bold">Demetrius Corkery</span>
-                        <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="column">
-            <div class="card column">
-                <h3 class="title title--m-size title--green">His mother had always taught him</h3>
-                <p class="paragraph card__content">
-                    <span class="c-icon c-icon--small" style="background-image: url('./static/images/icon.png')"></span>
-                    His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
-                </p>
-                <div class="row user-info">
-                    <div class="user-info__image">
-                        <img src="./static/images/avatar.jpg" alt=""/>
-                    </div>
-                    <div class="user-info__about column">
-                        <span class="title title--bold">Demetrius Corkery</span>
-                        <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
-                    </div>
-                </div>
-            </div>
-            <div class="card column">
-                <h3 class="title title--m-size title--green">His mother had always taught him</h3>
-                <p class="paragraph card__content">
-                    <span class="c-icon c-icon--small"  style="background-image: url('./static/images/icon.png')"></span>
-                    His mother had always taught him not to ever think of himself as better than others. He'd tried to live by this motto. He never looked down on those who were...
-                </p>
-                <div class="row user-info">
-                    <div class="user-info__image">
-                        <img src="./static/images/avatar.jpg" alt=""/>
-                    </div>
-                    <div class="user-info__about column">
-                        <span class="title title--bold">Demetrius Corkery</span>
-                        <span class="paragraph user-info__about__profession">Community Outreach Specialist</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="c-real-stories__first column"></div>
+        <div class="c-real-stories__second column"></div>
 </section>
 
 </body>
