add footer and style

--- a/src/index.html
+++ b/src/index.html
@@ -77,9 +77,98 @@
     </div>
 </section>
 <section class="c-real-stories row">
-        <div class="c-real-stories__first column"></div>
-        <div class="c-real-stories__second column"></div>
+    <div class="c-real-stories__first column"></div>
+    <div class="c-real-stories__second column"></div>
 </section>
+
+<footer class="c-footer column">
+    <div class="baseline-space row">
+        <div class="c-footer__col1 column marginBottom">
+            <div class="logo">
+                <img src="./static/images/footer_logo.png" alt="logo"/>
+            </div>
+            <div class="paragraph paragraph--white c-footer__paragraph">
+                Lorem ipsum dolor amet, consectetur adipiscing elit. Eget nisl nunc quam ac sed turpis volutpat. Cursus
+                sed massa non nisi, placerat.
+            </div>
+            <ul class="row">
+                <li class="navigation-wrapper__menu__item--small"><img src="./static/icons/instagram.svg" alt=""/></li>
+                <li class="navigation-wrapper__menu__item--small"><img src="./static/icons/dribble.svg" alt=""/></li>
+                <li class="navigation-wrapper__menu__item--small"><img src="./static/icons/twitter.svg" alt=""/></li>
+                <li class="navigation-wrapper__menu__item--small"><img src="./static/icons/youtube.svg" alt=""/></li>
+            </ul>
+        </div>
+
+        <div class="c-footer__col2 column">
+            <h3 class="title title--s-size title--white">Quick Links</h3>
+            <ul>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Offices</a> </li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Timetable</a></li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Clubs</a</li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Perks</a></li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Free Trial</a></li>
+            </ul>
+        </div>
+
+        <div class="c-footer__col2 column">
+            <h3 class="title title--s-size title--white">Guides</h3>
+            <ul>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">About</a> </li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Jobs</a></li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Applicants</a</li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Statements</a></li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Privacy</a></li>
+            </ul>
+        </div>
+
+        <div class="c-footer__col2 column">
+            <h3 class="title title--s-size title--white">Reach us</h3>
+            <ul>
+                <li><img src="./static/icons/message.svg" alt=""/> admin@worklyfe.com</li>
+                <li><img src="./static/icons/calling.svg" alt=""/> +88 98765 43210</li>
+                <li><img src="./static/icons/location.svg" alt=""/> 90210 Beverly Hills
+                    California USA
+                </li>
+
+            </ul>
+        </div>
+    </div>
+    <div class="baseline-space row">
+        <div class="reserved-rights">© 2022 WorkLyfe. All rights reserved</div>
+        <ul class="row">
+            <li class="navigation-wrapper__menu__item--small">
+                <a href="#" class="navigation-wrapper__menu__item__link">
+                    Terms & Conditions
+                </a>
+            </li>
+            <li class="navigation-wrapper__menu__item--small">
+                |
+            </li>
+            <li class="navigation-wrapper__menu__item--small">
+                <a href="#" class="navigation-wrapper__menu__item__link">
+                    Privacy Policy </a>
+            </li>
+            <li class="navigation-wrapper__menu__item--small">
+                |
+            </li>
+            <li class="navigation-wrapper__menu__item--small">
+                <a href="#" class="navigation-wrapper__menu__item__link">
+                    Sitemap
+                </a>
+            </li>
+            <li class="navigation-wrapper__menu__item--small">
+                |
+            </li>
+            <li class="navigation-wrapper__menu__item--small">
+                <a href="#" class="navigation-wrapper__menu__item__link">
+                    Disclaimer
+                </a>
+            </li>
+        </ul>
+
+    </div>
+
+</footer>
 
 </body>
 </html>
