fix styles and add mobile view

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             </li>
         </ul>
     </nav>
-    <button class="c-button">Login</button>
+    <button id="login-button" class="c-button">Login</button>
 </header>
 <section class="swiper c-hero-slider">
     <div class="swiper-wrapper">
@@ -56,11 +56,11 @@
     <div class="swiper-pagination"></div>
 </section>
 <section class="c-office row">
-    <div class="c-office__images">
+    <div class="c-office__images column">
         <div class="c-office__images__back"></div>
         <div class="c-office__images__front"></div>
     </div>
-    <div class="c-office__content">
+    <div class="c-office__content column">
         <h2 class="title title--medium--green">Check your new office</h2>
         <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget lectus urna. Nulla
             magna tortor, bibendum in molestie sed, gravida nec felis. Sed id egestasegestas risus, ut imperdiet
@@ -135,7 +135,7 @@
     </div>
     <div class="baseline-space row">
         <div class="reserved-rights">© 2022 WorkLyfe. All rights reserved</div>
-        <ul class="row">
+        <ul class="row sub-footer">
             <li class="navigation-wrapper__menu__item--small">
                 <a href="#" class="navigation-wrapper__menu__item__link">
                     Terms & Conditions
