add mobile view real stories section

--- a/src/index.html
+++ b/src/index.html
@@ -101,8 +101,8 @@
 
         <div class="c-footer__col2 column">
             <h3 class="title title--s-size title--white">Quick Links</h3>
-            <ul>
-                <li><a href="#" class="navigation-wrapper__menu__item__link">Offices</a> </li>
+            <ul class="footer-list">
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Offices</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Timetable</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Clubs</a</li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Perks</a></li>
@@ -112,8 +112,8 @@
 
         <div class="c-footer__col2 column">
             <h3 class="title title--s-size title--white">Guides</h3>
-            <ul>
-                <li><a href="#" class="navigation-wrapper__menu__item__link">About</a> </li>
+            <ul class="footer-list">
+                <li><a href="#" class="navigation-wrapper__menu__item__link">About</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Jobs</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Applicants</a</li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Statements</a></li>
@@ -123,7 +123,7 @@
 
         <div class="c-footer__col2 column">
             <h3 class="title title--s-size title--white">Reach us</h3>
-            <ul>
+            <ul class="footer-list">
                 <li><img src="./static/icons/message.svg" alt=""/> admin@worklyfe.com</li>
                 <li><img src="./static/icons/calling.svg" alt=""/> +88 98765 43210</li>
                 <li><img src="./static/icons/location.svg" alt=""/> 90210 Beverly Hills
@@ -165,10 +165,7 @@
                 </a>
             </li>
         </ul>
-
     </div>
-
 </footer>
-
 </body>
 </html>
