--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,8 @@
     <div class="logo">
         <img src="./static/images/logo.png" alt="logo"/>
     </div>
-    <nav class="navigation-wrapper">
-        <ul class="navigation-wrapper__menu">
-            <li class="navigation-wrapper__menu__item">
-                <a class="navigation-wrapper__menu__item__link" href="#">About</a>
-            </li>
-            <li class="navigation-wrapper__menu__item">
-                <a class="navigation-wrapper__menu__item__link" href=" #">Offices</a>
-            </li>
-            <li class="navigation-wrapper__menu__item">
-                <a class="navigation-wrapper__menu__item__link" href=" #">Packages</a>
-            </li>
-            <li class="navigation-wrapper__menu__item">
-                <a class="navigation-wrapper__menu__item__link" href="#">Benefits</a>
-            </li>
-            <li class="navigation-wrapper__menu__item">
-                <a class="navigation-wrapper__menu__item__link" href="#">Prices</a>
-            </li>
-        </ul>
+    <nav id="main-navigation" class="navigation-wrapper"></nav>
+    <nav class="mobile-navigation-wrapper hidden">
     </nav>
     <button id="login-button" class="c-button">Login</button>
 </header>
@@ -51,7 +35,6 @@
             </h1>
             <button class="c-button c-button--green">See the benefits</button>
         </div>
-
     </div>
     <div class="swiper-pagination"></div>
 </section>
