fix code with prettier

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
             <ul class="footer-list">
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Offices</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Timetable</a></li>
-                <li><a href="#" class="navigation-wrapper__menu__item__link">Clubs</a</li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Clubs</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Perks</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Free Trial</a></li>
             </ul>
@@ -98,7 +98,7 @@
             <ul class="footer-list">
                 <li><a href="#" class="navigation-wrapper__menu__item__link">About</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Jobs</a></li>
-                <li><a href="#" class="navigation-wrapper__menu__item__link">Applicants</a</li>
+                <li><a href="#" class="navigation-wrapper__menu__item__link">Applicants</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Statements</a></li>
                 <li><a href="#" class="navigation-wrapper__menu__item__link">Privacy</a></li>
             </ul>
