fix code and add Readme file

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <button class="c-button c-button--green">See the benefits</button>
         </div>
         <div class="c-hero-slider__content swiper-slide column">
-            <h1 class="title title--xl-size title--white">Welcome to Work<span
+            <h1 class="title title--xl-size title--white">elcome to Work<span
                     class="c-hero-slider__content__green-part">lyfe</span>
                 Office</h1>
             <button class="c-button c-button--green">See the benefits</button>
